deploy/cluster-admission-policy.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: ingress-no-default-backend
spec:
  mode: monitor
  module: registry://ghcr.io/vvlisn/policies/ingress-policy:v1.1.0
  settings:
    denyDefaultBackend: true
  rules:
    - apiGroups:
        - networking.k8s.io
      apiVersions:
        - v1
      resources:
        - ingresses
      operations:
        - CREATE
        - UPDATE
  mutating: false
  backgroundAudit: true
